On the road to 2025.11:
- updated IPXE to 20251101
defaults:
- removed linux-firmware packages from _PACKAGE array
setup:
- fixed firmware autodetection
- fixed autodetection of additional packages to install
- reenable microcode mkinitcpio hook on aarch64
- fixed mkinitcpio run on aarch64
Highlights 2025.10:
Environment:
- kernel 6.17.x
- updated IPXE to 20251001
- fixed bash history escape sequence MR #1
firmware:
- removed aeonsemi, dell, HP, and Lenovo
- fixed iwlwifi 
setup:
- disabled microcode mkinitcpio hook on aarch64
---
Highlights 2025.09:
- systemd 258
- enabled firmware autodetection on -latest and local image
  --> 12% faster bootup on both media types :)
Environment:
- updated IPXE to 20250829
- updated grub to 2.12.r359.g19c698d12
- added additional bash_completions
- added zsh completion
- added custom autorun.sh on local image
ISO:
- updated ISO grub config
- limit memory to 4G in UEFI MIX MODE to avoid NX issue
- switched to build ISO grub during image assembling
container:
- added firmware autodetection switch
manage:
- switched to kexec autodetection of supported mode
tools:
- removed archboot-bootloader.sh script
- removed archboot-qemu.sh script
iso.sh:
- cleanup and unify text messages
ipxe:
- fixed background image
server:
- update background image on upload
defaults:
- added _SPLASH option for custom uki splash
---
Highlights 2025.08:
- kernel 6.16.x
Environment:
- added systemd 258.x compatibility
- fixed tmpfiles not being created correctly
- updated getty and serial getty systemd service files
- removed custom systemd-user-session.service
- 3cpio 0.11.0
- removed bcachefs support
init:
- added loop module to manual module loading array
pacsetup:
- fixed download URL for mirrorlist
setup:
- fixed pacman secureboot hook
- removed bcachefs support
testsuite:
- speedup Wi-Fi routine
- speedup non tracked files routine
- removed bcachefs support
---
Highlights 2025.07:
- updated IPXE to 20250723
- updated bash to 5.3.x
testsuite: